--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "format": "prettier --write \"**/*.{ts,js,json,md}\"",
     "format:check": "prettier --check \"**/*.{ts,js,json,md}\"",
     "docs": "hardhat dodoc",
-    "prepare": "husky"
+    "prepare": "husky",
+    "storage": "bash scripts/storage-delta/run.sh"
   },
   "repository": {
     "type": "git",
@@ -54,8 +55,8 @@
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@nomiclabs/hardhat-solhint": "^4.0.1",
     "@onchain-id/solidity": "^2.2.2-beta2",
-    "@openzeppelin/contracts": "^5.3.0",
-    "@openzeppelin/contracts-upgradeable": "^5.3.0",
+    "@openzeppelin/contracts": "^4.9.6",
+    "@openzeppelin/contracts-upgradeable": "^4.9.6",
     "@openzeppelin/hardhat-upgrades": "^3.9.0",
     "@primitivefi/hardhat-dodoc": "^0.2.3",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
@@ -75,6 +76,7 @@
     "fs-extra": "^11.2.0",
     "glob": "^11.0.0",
     "hardhat": "^2.24.2",
+    "hardhat-storage-layout-changes": "^0.1.2",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
     "prettier": "^3.4.1",
